--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,6 +75,7 @@ body {
   height: 100%;
   width: 230px;
   background-color: white;
+  padding: 10px;
   overflow-y: scroll;
 }
 
@@ -90,6 +91,12 @@ body {
   display: flex;
   align-items: center;
   padding: 12px 25px;
+  -webkit-box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+    border-bottom: 5px solid #006C32;
+    border-radius: 10px;
+    margin-top: 5px;
 }
 
 .sidebar__category span {
@@ -134,6 +141,9 @@ hr {
   margin-left: 5px;
   margin-right: 5px;
   margin-bottom: 30px;
+  -webkit-box-shadow:0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 .video:hover{
   background-color: #e5e5e5;
@@ -141,6 +151,7 @@ hr {
 .video__thumbnail {
   width: 100%;
   height: 170px;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .video__thumbnail img {
